1. Collection API Улучшения[#185510]